# awsmock-lrt

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  vcpkg.json
.github/workflows/: docker.yml
docker/: Dockerfile  Dockerfile.builder  Dockerfile.java17  Dockerfile.java21  Dockerfile.java25  Dockerfile.nodejs20  Dockerfile.nodejs22  Dockerfile.nodejs24  Dockerfile.provided  Dockerfile.python  Dockerfile.python312  Dockerfile.python313  Dockerfile.python314  awsmock.json
include/awsmock/core/: AwsUtils.h  BackupUtils.h  BsonConverter.h  BsonCursorRange.h  BsonUtils.h  Cron.h  CronUtils.h  CryptoUtils.h  DateTimeUtils.h  DirUtils.h  EventBus.h  FieldAlloc.h  FileUtils.h  HttpSocket.h  HttpSocketResponse.h  HttpUtils.h  JsonUtils.h  JwtUtils.h  Linq.h  MagicDetector.h  NumberUtils.h  PagingUtils.h  RandomUtils.h  ServerCertificate.h  SrpUtils.h  StringUtils.h  SystemUtils.h  TarUtils.h  TestUtils.h  Version.h  XmlUtils.h  ZipUtils.h
include/awsmock/core/config/: Configuration.h
include/awsmock/core/container/: DomainSocket.h  DomainSocketResult.h  TlsSocket.h  UnixSocket.h  WindowsSocket.h
include/awsmock/core/crypto/: CRC32Processor.h
include/awsmock/core/exception/: BadRequestException.h  ContainerException.h  CoreException.h  DatabaseException.h  DynamoDbParseException.h  ForbiddenException.h  JsonException.h  NotFoundException.h  ServiceException.h  UnauthorizedException.h
include/awsmock/core/logging/: LogStream.h  LogWebsocketSink.h  LoggingServer.h
include/awsmock/core/monitoring/: MonitoringDefinition.h  MonitoringTimer.h
include/awsmock/core/scheduler/: Scheduler.h
include/awsmock/dto/apigateway/: CreateApiKeyRequest.h  CreateApiKeyResponse.h  CreateResourceRequest.h  CreateResourceResponse.h  CreateRestApiRequest.h  CreateRestApiResponse.h  DeleteApiKeyRequest.h  DeleteResourceRequest.h  DeleteRestApiRequest.h  GetApiKeysRequest.h  GetApiKeysResponse.h  GetResourceRequest.h  GetResourceResponse.h  GetResourcesRequest.h  GetResourcesResponse.h  GetRestApisRequest.h  GetRestApisResponse.h
include/awsmock/dto/cognito/: AdminAddUserToGroupRequest.h  AdminConfirmUserRequest.h  AdminCreateUserRequest.h  AdminCreateUserResponse.h  AdminDeleteUserRequest.h  AdminDisableUserRequest.h  AdminEnableUserRequest.h  AdminGetUserRequest.h  AdminGetUserResponse.h  AdminInitiateAuthRequest.h  AdminInitiateAuthResponse.h  AdminRemoveUserFromGroupRequest.h  CreateGroupRequest.h  CreateGroupResponse.h  CreateUserPoolClientRequest.h  CreateUserPoolClientResponse.h  CreateUserPoolDomainRequest.h  CreateUserPoolDomainResponse.h  CreateUserPoolRequest.h  CreateUserPoolResponse.h  DeleteGroupRequest.h  DeleteUserPoolClientRequest.h  DeleteUserPoolRequest.h  DescribeUserPoolClientRequest.h  DescribeUserPoolClientResponse.h  DescribeUserPoolDomainRequest.h  DescribeUserPoolDomainResponse.h  DescribeUserPoolRequest.h  DescribeUserPoolResponse.h  GlobalSignOutRequest.h  InitiateAuthRequest.h  InitiateAuthResponse.h  ListGroupsRequest.h  ListGroupsResponse.h  ListUserPoolClientsRequest.h  ListUserPoolClientsResponse.h  ListUserPoolRequest.h  ListUserPoolResponse.h  ListUsersInGroupRequest.h  ListUsersInGroupResponse.h  (+10 more)
include/awsmock/dto/common/: ApiGatewayClientCommand.h  ApplicationClientCommand.h  BaseClientCommand.h  BaseCounter.h  BaseDto.h  BaseObject.h  CognitoClientCommand.h  Common.h  ContainerClientCommand.h  DynamoDbClientCommand.h  GammaClientCommand.h  KMSClientCommand.h  LambdaClientCommand.h  MonitoringClientCommand.h  S3ClientCommand.h  SNSClientCommand.h  SQSClientCommand.h  SSMClientCommand.h  SecretsManagerClientCommand.h  Services.h  SortColumn.h  UserAgent.h
include/awsmock/dto/container/: CreateContainerRequest.h  CreateContainerResponse.h  CreateNetworkRequest.h  CreateNetworkResponse.h  DeleteContainerRequest.h  InspectContainerResponse.h  KillContainerRequest.h  ListContainerRequest.h  ListContainerResponse.h  ListImageResponse.h  ListNetworkResponse.h  ListStatsRequest.h  ListStatsResponse.h  PruneContainerResponse.h  StartContainerRequest.h  StopContainerRequest.h  VersionResponse.h
include/awsmock/dto/dynamodb/: CreateTableRequest.h  CreateTableResponse.h  DeleteAllItemsRequest.h  DeleteItemRequest.h  DeleteItemResponse.h  DeleteTableRequest.h  DeleteTableResponse.h  DescribeTableRequest.h  DescribeTableResponse.h  GetItemRequest.h  GetItemResponse.h  ListStreamsRequest.h  ListStreamsResponse.h  ListTableRequest.h  ListTableResponse.h  PutItemRequest.h  PutItemResponse.h  QueryRequest.h  QueryResponse.h  ScanRequest.h  ScanResponse.h
include/awsmock/dto/kms/: CreateKeyRequest.h  CreateKeyResponse.h  DecryptRequest.h  DecryptResponse.h  DescribeKeyRequest.h  DescribeKeyResponse.h  EncryptRequest.h  EncryptResponse.h  GetKeyCounterRequest.h  GetKeyCounterResponse.h  ListKeysRequest.h  ListKeysResponse.h  ScheduleKeyDeletionRequest.h  ScheduleKeyDeletionResponse.h  UpdateKeyCounterRequest.h
include/awsmock/dto/lambda/: AccountSettingsResponse.h  CreateEventSourceMappingsRequest.h  CreateEventSourceMappingsResponse.h  CreateFunctionRequest.h  CreateFunctionResponse.h  CreateTagRequest.h  DeleteFunctionRequest.h  DeleteTagsRequest.h  GetFunctionResponse.h  ListEventSourceMappingsRequest.h  ListEventSourceMappingsResponse.h  ListFunctionResponse.h  ListTagsResponse.h  RebuildLambdaRequest.h  UpdateFunctionCodeRequest.h  UpdateFunctionCodeResponse.h
include/awsmock/dto/module/: CleanInfrastructureRequest.h  ExportInfrastructureRequest.h  (+6 more)
include/awsmock/lrt/: GammaJvmRuntime.h  GammaNodeRuntime.h  GammaProcessRuntime.h  GammaPythonRuntime.h  GammaRuntimeFactory.h  HttpHandler.h  HttpServer.h  IGammaRuntime.h  LambdaCppRuntime.h  LambdaJvmRuntime.h  LambdaNodeRuntime.h  LambdaProcessRuntime.h  LambdaPythonRuntime.h  LambdaRuntimeFactory.h  StatusReporter.h
src/: GammaJvmRuntime.cpp  GammaNodeRuntime.cpp  GammaProcessRuntime.cpp  GammaPythonRuntime.cpp  HttpHandler.cpp  HttpServer.cpp  LambdaCppRuntime.cpp  LambdaJvmRuntime.cpp  LambdaNodeRuntime.cpp  LambdaProcessRuntime.cpp  LambdaPythonRuntime.cpp  StatusReporter.cpp  main.cpp
(+528 files in other folders)
